--- a/lab3/src/makefile
+++ b/lab3/src/makefile
@@ -1,17 +1,31 @@
 CC=gcc
 CFLAGS=-I.
 
-sequential_min_max : utils.o find_min_max.o utils.h find_min_max.h
-	$(CC) -o sequential_min_max find_min_max.o utils.o sequential_min_max.c $(CFLAGS)
+# Default target - build all programs
+all: sequential_min_max parallel_min_max exec_sequential
 
-parallel_min_max : utils.o find_min_max.o utils.h find_min_max.h
-	$(CC) -o parallel_min_max utils.o find_min_max.o parallel_min_max.c $(CFLAGS)
+# Sequential program
+sequential_min_max: utils.o find_min_max.o
+	$(CC) -o sequential_min_max sequential_min_max.c find_min_max.o utils.o $(CFLAGS)
 
-utils.o : utils.h
+# Parallel program  
+parallel_min_max: utils.o find_min_max.o
+	$(CC) -o parallel_min_max parallel_min_max.c find_min_max.o utils.o $(CFLAGS)
+
+# Exec program that runs sequential_min_max
+exec_sequential: sequential_min_max
+	$(CC) -o exec_sequential exec_sequential.c $(CFLAGS)
+
+# Object files
+utils.o: utils.c utils.h
 	$(CC) -o utils.o -c utils.c $(CFLAGS)
 
-find_min_max.o : utils.h find_min_max.h
+find_min_max.o: find_min_max.c find_min_max.h utils.h
 	$(CC) -o find_min_max.o -c find_min_max.c $(CFLAGS)
 
-clean :
-	rm utils.o find_min_max.o sequential_min_max parallel_min_max
+# Clean target
+clean:
+	rm -f utils.o find_min_max.o sequential_min_max parallel_min_max exec_sequential
+
+# Phony targets (not actual files)
+.PHONY: all clean
